<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <com.github.ebraminio.droidpersiancalendar.preferences.ShapedPreferenceCategory android:title="@string/settings">

        <com.github.ebraminio.droidpersiancalendar.preferences.ShapedListPreference
            android:entries="@array/birthControlEntries"
            android:entryValues="@array/birthControlValues"
            android:key="@string/birth_control_key"
            android:title="@string/birth_control" />
        
        <ListPreference
            android:key="@string/period_length_key"
            android:title="@string/period_length" />

        <ListPreference
            android:key="@string/cycle_length_key"
            android:title="@string/cycle_length" />

        <ListPreference
            android:key="@string/pms_length_key"
            android:title="@string/pms_length" />

    </com.github.ebraminio.droidpersiancalendar.preferences.ShapedPreferenceCategory>

    <com.github.ebraminio.droidpersiancalendar.preferences.ShapedPreferenceCategory android:title="@string/general">

        <android.support.v7.preference.SwitchPreferenceCompat
            android:key="@string/enable_prediction_mode_key"
            android:title="@string/enable_prediction_mode"
            android:summary="@string/prediction_mode_description"
            android:defaultValue="true" />

        <Preference
            android:key="@string/tooltips_complete_key"
            android:summary="@string/requires_restart"
            android:title="@string/restart_onboarding"/>

    </com.github.ebraminio.droidpersiancalendar.preferences.ShapedPreferenceCategory>

    <com.github.ebraminio.droidpersiancalendar.preferences.ShapedPreferenceCategory android:title="@string/data">

        <Preference
            android:key="@string/clear_data_key"
            android:title="@string/clear_data"
            android:summary="@string/clear_data_explanation"
            android:defaultValue="false" />

    </com.github.ebraminio.droidpersiancalendar.preferences.ShapedPreferenceCategory>

</android.support.v7.preference.PreferenceScreen>
