<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll_data_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@drawable/background_gradient_light"
    android:paddingBottom="@dimen/activity_title_padding"
    android:paddingTop="@dimen/activity_title_padding">

    <LinearLayout
        android:id="@+id/scroll_layout_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/infographic_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/chart_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_margin"
            android:layout_marginLeft="@dimen/card_margin"
            android:layout_marginRight="@dimen/card_margin"
            android:padding="@dimen/card_padding"
            card_view:cardBackgroundColor="@android:color/white">

            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/infographic_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="ltr"
                android:orientation="vertical"
                app:divider="?attr/appDivider"
                app:dividerPadding="@dimen/divider_margin"
                app:showDividers="middle">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/cycle_chart_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="end"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:clickable="false"
                    android:paddingBottom="@dimen/card_padding"
                    android:paddingTop="@dimen/card_padding"
                    android:textColor="?attr/colorTextPrimary"
                    android:textSize="@dimen/text_size_medium_header" />

                <org.eazegraph.lib.charts.ValueLineChart
                    android:id="@+id/line_chart_cycles"
                    android:layout_width="wrap_content"
                    android:layout_height="180dp"
                    android:padding="@dimen/activity_horizontal_margin"
                    app:egCurveSmoothness="0.35"
                    app:egIndicatorLineColor="@color/medium_background_purple"
                    app:egIndicatorTextColor="@color/medium_background_purple"
                    app:egLegendColor="@color/medium_background_purple"
                    app:egLegendHeight="30dp"
                    app:egLegendTextSize="14sp"
                    app:egUseCubic="true"
                    app:egUseOverlapFill="true"
                    card_view:egEmptyDataText="@string/error_not_enough_data" />

                <TextView
                    android:id="@+id/no_data_cycle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:text="@string/error_not_enough_data"
                    android:textColor="@color/light_text_grey"
                    android:textSize="@dimen/text_size_data_summary"
                    android:visibility="gone" />

            </android.support.v7.widget.LinearLayoutCompat>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/period_chart_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_margin"
            android:layout_marginLeft="@dimen/card_margin"
            android:layout_marginRight="@dimen/card_margin"
            card_view:cardBackgroundColor="@android:color/white">

            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/period_chart_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="ltr"
                android:orientation="vertical"
                app:divider="?attr/appDivider"
                app:dividerPadding="@dimen/divider_margin"
                app:showDividers="middle">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/period_chart_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="end"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:clickable="false"
                    android:paddingBottom="@dimen/card_padding"
                    android:paddingTop="@dimen/card_padding"
                    android:textColor="?attr/colorTextPrimary"
                    android:textSize="@dimen/text_size_medium_header" />

                <org.eazegraph.lib.charts.ValueLineChart
                    android:id="@+id/line_chart_periods"
                    android:layout_width="wrap_content"
                    android:layout_height="140dp"
                    android:padding="@dimen/activity_horizontal_margin"
                    app:egCurveSmoothness="0.35"
                    app:egEmptyDataText="@string/error_not_enough_data"
                    app:egIndicatorLineColor="@color/medium_background_purple"
                    app:egLegendColor="@color/medium_background_purple"
                    app:egLegendHeight="30dp"
                    app:egUseCubic="true"
                    app:egUseOverlapFill="true" />

                <TextView
                    android:id="@+id/no_data_period"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:text="@string/error_not_enough_data"
                    android:textColor="@color/light_text_grey"
                    android:textSize="@dimen/text_size_data_summary"
                    android:visibility="gone" />

            </android.support.v7.widget.LinearLayoutCompat>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/status_chart_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_margin"
            android:layout_marginLeft="@dimen/card_margin"
            android:layout_marginRight="@dimen/card_margin"
            card_view:cardBackgroundColor="@android:color/white">

            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/status_chart_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:layoutDirection="ltr"
                android:orientation="vertical"
                app:divider="?attr/appDivider"
                app:dividerPadding="@dimen/divider_margin"
                app:showDividers="middle">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/status_chart_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="end"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:paddingBottom="@dimen/card_padding"
                    android:paddingTop="@dimen/card_padding"
                    android:textColor="?attr/colorTextPrimary"
                    android:textSize="@dimen/text_size_medium_header" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <org.eazegraph.lib.charts.PieChart
                        android:id="@+id/status_pie_chart"
                        android:layout_width="200dip"
                        android:layout_height="200dip"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_gravity="start|center_vertical"
                        android:layout_margin="@dimen/toolbar_padding"
                        android:paddingTop="@dimen/toolbar_padding"
                        app:egEmptyDataText="@string/error_not_enough_data"
                        app:egLegendHeight="40dp"
                        app:egLegendTextSize="14sp"
                        app:egValueTextSize="0sp" />

                    <LinearLayout
                        android:id="@+id/legend_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="end"
                        android:gravity="end"
                        android:orientation="vertical"
                        android:padding="@dimen/toolbar_padding">

                        <TextView
                            android:id="@+id/legend_pain"
                            style="@style/HamdamTheme.GraphLegendTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pain"
                            android:textColor="@color/pain" />

                        <TextView
                            android:id="@+id/legend_bleeding"
                            style="@style/HamdamTheme.GraphLegendTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bleeding"
                            android:textColor="@color/bleeding" />

                        <TextView
                            android:id="@+id/legend_mood"
                            style="@style/HamdamTheme.GraphLegendTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mood"
                            android:textColor="@color/mood" />

                        <TextView
                            android:id="@+id/legend_sleep"
                            style="@style/HamdamTheme.GraphLegendTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sleep"
                            android:textColor="@color/sleep" />

                        <TextView
                            android:id="@+id/legend_sex"
                            style="@style/HamdamTheme.GraphLegendTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sex"
                            android:textColor="@color/sex" />

                        <TextView
                            android:id="@+id/legend_fluids"
                            style="@style/HamdamTheme.GraphLegendTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fluids"
                            android:textColor="@color/fluids" />

                        <TextView
                            android:id="@+id/legend_exercise"
                            style="@style/HamdamTheme.GraphLegendTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/exercise"
                            android:textColor="@color/exercise" />

                    </LinearLayout>
                </RelativeLayout>

            </android.support.v7.widget.LinearLayoutCompat>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>
